--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-scikit-learn==0.22.1
-numpy
-pandas
-matplotlib
-streamlit==0.76.0
-Pillow
-seaoborn
+Pillow==9.0.1
+streamlit==1.3.0
+uvicorn==0.16.0
+scikit-learn
+nltk
